# mypv

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  changelog.md  developer_doc.md  hacs.json  pyproject.toml
.github/workflows/: release.yaml
custom_components/mypv/: __init__.py  binary_sensor.py  button.py  communicate.py  config_flow.py  connection.py  const.py  discovery.py  entity.py  icons.json  manifest.json  mypv_device.py  number.py  select.py  sensor.py  strings.json  switch.py  update.py
custom_components/mypv/translations/: de.json  en.json
scripts/: develop  hassfest.sh
tests/components/mypv/: __init__.py  conftest.py  const.py  test_actions.py  test_binary_sensor.py  test_communicate.py  test_config_flow.py  test_connection.py  test_discovery.py  test_entities.py  test_init.py  test_sensor_unit.py  test_translations.py  test_update.py
