[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mypv"
version = "1.3.3"
description = "myPV custom integration for Home Assistant"
readme = "README.md"
requires-python = ">=3.14"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
norecursedirs = [".git"]
filterwarnings = [
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

[tool.coverage.run]
source = ["custom_components/mypv"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.ruff]
# Mirrors Home Assistant core's ruff config; only the per-file-ignores paths
# are adapted to the HACS layout (custom_components/mypv).
required-version = ">=0.15.15"
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = [
    "A001",
    "ASYNC",
    "B",
    "BLE",
    "C",
    "COM818",
    "D",
    "E",
    "F",
    "FLY",
    "FURB",
    "G",
    "I",
    "INP",
    "ISC",
    "ICN001",
    "LOG",
    "N804",
    "N805",
    "N806",
    "N815",
    "PERF",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PYI",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "SLF",
    "SLOT",
    "T20",
    "TC",
    "TID",
    "TRY",
    "UP",
    "W",
]
ignore = [
    "D202",
    "D203",
    "D213",
    "D406",
    "D407",
    "D417",
    "E501",
    "PLR0911",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "PLR2004",
    "PLW2901",
    "TC001",
    "TC002",
    "TC003",
    "TRY003",
    "TRY400",
    "COM812",
]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"async_timeout".msg = "use asyncio.timeout instead"
"pytz".msg = "use zoneinfo instead"
"tests".msg = "You should not import tests"
"__future__.annotations".msg = "It should not be needed because Home Assistant requires Python 3.14+"

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["homeassistant"]
combine-as-imports = true
split-on-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",
    "SLF001",
    "TID251",
    "TID252",
    "PLR2004",
]

[tool.ruff.lint.mccabe]
max-complexity = 25

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
